--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "^2.6.2",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.14.0",
+    "connect-ensure-login": "git+https://github.com/IsaacSmith13/connect-ensure-login.git",
     "connect-flash": "^0.1.1",
     "dotenv": "^7.0.0",
     "ejs": "^2.6.1",
